# sdm-metrics-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.ingestion  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
config/: logging.yaml  teams.yaml
db/: schema.sql
grafana/: grafana.ini
grafana/dashboards/: sdm-team.json
grafana/provisioning/dashboards/: default.yaml
grafana/provisioning/datasources/: sqlite.yaml
scripts/: export_to_postgres.py
src/: __init__.py  config.py  scheduler.py
src/capacity/: __init__.py  app.py  routes.py
src/capacity/templates/: capacity_form.html
src/db/: connection.py  queries.py  seed.py
src/ingestion/: base.py  github.py  jira.py
src/metrics/: __init__.py  compute.py
tests/: conftest.py  test_capacity_app.py  test_config.py  test_db_connection.py  test_db_seed.py  test_ingestion_base.py  test_ingestion_github.py  test_ingestion_jira.py  test_metrics_compute.py  test_queries.py
